logs/spa-phone-api.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mechanize'...
Compiling './lib/python3.5/site-packages/mechanize/_beautifulsoup.py'...
***   File "./lib/python3.5/site-packages/mechanize/_beautifulsoup.py", line 267
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_form.py'...
***   File "./lib/python3.5/site-packages/mechanize/_form.py", line 196
    nonce = "".join([str(random.randint(0, sys.maxint-1)) for i in 0,1,2])
                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_html.py'...
***   File "./lib/python3.5/site-packages/mechanize/_html.py", line 191
    except sgmllib.SGMLParseError, exc:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_http.py'...
***   File "./lib/python3.5/site-packages/mechanize/_http.py", line 243
    except HTTPError, f:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_mechanize.py'...
***   File "./lib/python3.5/site-packages/mechanize/_mechanize.py", line 231
    except urllib2.HTTPError, error:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_msiecookiejar.py'...
***   File "./lib/python3.5/site-packages/mechanize/_msiecookiejar.py", line 33
    WIN32_EPOCH = 0x019db1ded53e8000L  # 1970 Jan 01 00:00:00 in Win32 FILETIME
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_opener.py'...
***   File "./lib/python3.5/site-packages/mechanize/_opener.py", line 320
    except urllib2.HTTPError, error:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mechanize/_sgmllib_copy.py'...
***   File "./lib/python3.5/site-packages/mechanize/_sgmllib_copy.py", line 396
    print '*** Unbalanced </' + tag + '>'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mechanize/_urllib2_fork.py'...
***   File "./lib/python3.5/site-packages/mechanize/_urllib2_fork.py", line 173
    raise AttributeError, attr
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mechanize-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spa_phone_api-0.4.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
